--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -13,7 +13,7 @@
 
     <ion-item>
       <ion-label floating>Time limit</ion-label>
-      <ion-input formControlName="timeLimit" type="number" value="10"></ion-input>
+      <ion-input formControlName="secondsLimit" type="number" value="20"></ion-input>
     </ion-item>
 
     <button ion-button full color="primary" [disabled]="!settingsForm.valid" style="margin-top: 20px;" type="submit">Save</button>
